# smartchime

./: .gitignore  .pre-commit-config.yaml  Automation_Custom_Script.sh  NOTES.txt  README.md  audio_manager.py  config.example.json  config.example.yaml  dietpi.txt  encoder.py  encoder_manager.py  hdmi_manager.py  luma_patch.py  main.py  oled_manager.py  pyproject.toml  requirements.txt  scroller.py  shairport_manager.py  shairport_metadata.py  stateTracker.py  synchronizer.py  widgetFactory.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: oled-v2-message-contract.json  oled-v2-message-contract.schema.json
examples/: doorbell_automation.yaml  message_from_rss.yaml  motion_automation.yaml  oled_v2_state.yaml
home_assistant_automations/: event_state.yaml  oled_state.yaml  smartchime_doorbell_event.yaml
mqtt-schema/: event-state-doorbell-contract.schema.json  event-state-motion-contract.schema.json
src/smartchime/: __init__.py  __main__.py  audio_manager.py  encoder_manager.py  hdmi_manager.py  luma_patch.py  main.py  oled_manager.py  shairport_metadata.py
tests/: conftest.py  test_audio_manager.py  test_encoder_manager.py  test_hdmi_manager.py  test_luma_patch.py  test_main.py  test_oled_manager.py  test_shairport_metadata.py
